--- a/src/input.css
+++ b/src/input.css
@@ -4,6 +4,6 @@
 
 @layer components {
     .btn-header {
-        @apply transition py-1 px-2 hover:bg-slate-200 hover:bg-opacity-20 active:bg-white active:text-XBlueStrong rounded-lg bottom-1/2 self-center;
+        @apply transition py-1 px-2 text-center hover:bg-slate-200 hover:bg-opacity-20 active:bg-white active:text-XBlueStrong rounded-lg bottom-1/2 self-center;
     }
 }
