--- a/src/input.css
+++ b/src/input.css
@@ -6,4 +6,12 @@
     .btn-header {
         @apply transition py-1 px-2 text-center hover:bg-slate-200 hover:bg-opacity-20 active:bg-white active:text-XBlueStrong rounded-lg bottom-1/2 self-center;
     }
+
+    .img-memory{
+        @apply w-32 h-32 my-3
+    }
+
+    .collone-memory{
+        @apply ml-3
+    }
 }
